--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="Klotter för dårar">
+    <meta name="description" content="Klaudd">
     <meta name="author" content="">
 
-    <title>Kaffekaos</title>
+    <title>Klaudd</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
