--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<!-- FullScreen -->
     <div  class="intro-header">
 		  <div class="col-xs-12 text-center abcen1 main-stuff">
-			     <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Kaffekaos</h1>
+			     <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Klaudd din tyska porrstjärna</h1>
            <h3 ng-hide="loggedIn" class="h3_home wow fadeIn" data-wow-delay="0.6s">Logga in och vinn kaffe</h3>
            <div ng-show="loggedIn">
              <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Tjenare, {{name}}</h3>
