--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<!-- Magnific Popup core CSS file -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
 
-  <link rel="stylesheet" href="css/kaffe.css">
+  <link rel="stylesheet" href="css/klaudd.css">
 
 	<script src="js/modernizr-2.8.3.min.js"></script>  <!-- Modernizr /-->
 	<!--[if IE 9]>
@@ -79,11 +79,10 @@
 	<!-- FullScreen -->
     <div  class="intro-header">
 		  <div class="col-xs-12 text-center abcen1 main-stuff">
-			     <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Klaudd din tyska porrstjärna</h1>
-           <h3 ng-hide="loggedIn" class="h3_home wow fadeIn" data-wow-delay="0.6s">Logga in och vinn kaffe</h3>
+			     <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Klaudd</h1>
+           <h3 ng-hide="loggedIn" class="h3_home wow fadeIn" data-wow-delay="0.6s">Logga in och klaudda</h3>
            <div ng-show="loggedIn">
              <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Tjenare, {{name}}</h3>
-             <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Du vann inget kaffe...!</h3>
            </div>
 
 			<ul ng-hide="loggedIn" class="list-inline intro-social-buttons">
