--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
            <h3 ng-hide="loggedIn" class="h3_home wow fadeIn" data-wow-delay="0.6s">Logga in och klaudda</h3>
            <div ng-show="loggedIn">
              <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Tjenare, {{name}}</h3>
+             <h4>Sätt igång och klaudda</h4>
+             <input type="file" accept="image/*" capture="camera" />
            </div>
 
 			<ul ng-hide="loggedIn" class="list-inline intro-social-buttons">
