--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
      var js, fjs = d.getElementsByTagName(s)[0];
      if (d.getElementById(id)) {return;}
      js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
+     js.src = "http://connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
@@ -91,7 +91,7 @@
 		</div>
       </div>
 
-	<script src="//api.backendless.com/sdk/js/v4/beta/backendless.min.js"></script>
+	<script src="http://api.backendless.com/sdk/js/v4/beta/backendless.min.js"></script>
 
 	<!-- angular app -->
 	<script src="app/angular.min.js"></script>
