--- a/index.html
+++ b/index.html
@@ -86,10 +86,12 @@
              <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Tjenare, {{name}}</h3>
              <h4>Sätt igång och klaudda</h4>
 
+            <form>
               <label class="custom-file-upload">
-                <input id="file-upload" type="file" accept="image/*" capture="camera" />
+                <input id="fileUpload" type="file" accept="image/*" capture="camera" onchange="handleFileSelect(this.form.fileUpload)"/>
                 Klaudda en bild
               </label>
+            </form>
            </div>
 
 			<ul ng-hide="loggedIn" class="list-inline intro-social-buttons">
@@ -104,6 +106,7 @@
 	<script src="app/angular.min.js"></script>
 	<script src="app/app.js"></script>
 	<script src="app/klotterCtrl.js"></script>
+  <script src="app/fileUpload.js"></script>
 
 
     <!-- JavaScript -->
