--- a/index.html
+++ b/index.html
@@ -3,145 +3,147 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
-  <!--[if gt IE 9]><!--> <html> <!--<![endif]-->
+<!--[if gt IE 9]><!-->
+<html>
+<!--<![endif]-->
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="description" content="Klaudd">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="description" content="Klaudd">
+  <meta name="author" content="KnowIT Gävleborg">
 
-    <title>Klaudd</title>
+  <title>Klaudd</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom Google Web Font -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href='//fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-	<link href='//fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+  <!-- Custom Google Web Font -->
+  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href='//fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic'
+    rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
 
-    <!-- Custom CSS-->
-    <link href="css/general.css" rel="stylesheet">
+  <!-- Custom CSS-->
+  <link href="css/general.css" rel="stylesheet">
 
-	 <!-- Owl-Carousel -->
-    <link href="css/custom.css" rel="stylesheet">
-	<link href="css/owl.carousel.css" rel="stylesheet">
-    <link href="css/owl.theme.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<link href="css/animate.css" rel="stylesheet">
+  <!-- Owl-Carousel -->
+  <link href="css/custom.css" rel="stylesheet">
+  <link href="css/owl.carousel.css" rel="stylesheet">
+  <link href="css/owl.theme.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
 
-	<!-- Magnific Popup core CSS file -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+  <!-- Magnific Popup core CSS file -->
+  <link rel="stylesheet" href="css/magnific-popup.css">
 
   <link rel="stylesheet" href="css/klaudd.css">
 
-	<script src="js/modernizr-2.8.3.min.js"></script>  <!-- Modernizr /-->
-	<!--[if IE 9]>
+  <script src="js/modernizr-2.8.3.min.js"></script>
+  <!-- Modernizr /-->
+  <!--[if IE 9]>
 		<script src="js/PIE_IE9.js"></script>
 	<![endif]-->
-	<!--[if lt IE 9]>
+  <!--[if lt IE 9]>
 		<script src="js/PIE_IE678.js"></script>
 	<![endif]-->
 
-	<!--[if lt IE 9]>
+  <!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
 	<![endif]-->
 
 </head>
 
 <body id="home" ng-app="klotterApp" ng-controller="klotterCtrl">
-
   <script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId            : '1534693413234227',
-      autoLogAppEvents : true,
-      xfbml            : true,
-      version          : 'v2.9'
-    });
-    FB.AppEvents.logPageView();
-  };
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: '1534693413234227',
+        autoLogAppEvents: true,
+        xfbml: true,
+        version: 'v2.9'
+      });
+      FB.AppEvents.logPageView();
+    };
 
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
-<style>
+    (function (d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) { return; }
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
+  <style>
 
-</style>
+  </style>
 
-	<!-- Preloader -->
-	<div id="preloader">
-		<div id="status"></div>
-	</div>
-
-  <div id="loadertrams" style="display: none;" ng-cloak class="loading">
-    <i class="fa fa-cog fa-spin fa-3x fa-fw"></i>
-    <span class="sr-only">Loading...</span>
+  <!-- Preloader -->
+  <div id="preloader">
+    <div id="status"></div>
   </div>
 
-	<!-- FullScreen -->
-    <div  class="intro-header">
-		  <div class="col-xs-12 text-center abcen1 main-stuff">
-			     <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Klaudd</h1>
-           <h3 ng-hide="loggedIn" class="h3_home wow fadeIn" data-wow-delay="0.6s">Logga in och klaudda</h3>
+  <!-- FullScreen -->
+  <div id="main" class="intro-header">
+    <div class="col-xs-12 text-center abcen1 main-stuff">
+      <h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">Klaudd</h1>
+      <h3 ng-hide="loggedIn" class="h3_home wow fadeIn" data-wow-delay="0.6s">Logga in och klaudda</h3>
+      <div ng-show="loggedIn">
+        <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Tjenare, {{name}}</h3>
+        <h4>Sätt igång och klaudda</h4>
 
-           <div ng-show="loggedIn">
-             <h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Tjenare, {{name}}</h3>
-             <h4>Sätt igång och klaudda</h4>
-
-            <form>
-              <label class="custom-file-upload">
+        <label class="custom-file-upload">
                 <input id="fileUpload" type="file" accept="image/*" capture="camera" ng-upload-change="handleFileSelect($event)" />
                 Klaudda en bild
               </label>
-            </form>
-
-            <div class="row">
-              <div ng-repeat="klotter in klotterposts" class="col-sm-3 pull-right wow fadeInRightBig">
-                <div class="card">
-                  <div class="cardcontainer">
-                   <img class="img-rounded img-thumbnail" src="{{klotter.publicUrl}}"/>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-           </div>
-
-			<ul ng-hide="loggedIn" class="list-inline intro-social-buttons">
-        <li ng-click="facebookLogin()" href="#login" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Logga in via Facebook</span></li>
-			</ul>
-		</div>
       </div>
+      <ul ng-hide="loggedIn" class="list-inline intro-social-buttons">
+        <li ng-click="facebookLogin()" href="#login" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Logga in via Facebook</span></li>
+      </ul>
+    </div>
+    <div ng-show="loggedIn" class="col-xs-12 text-center abcen wow fadeIn animated animated" style="visibility: visible;">
+      <div class="button_down ">
+        <a class="imgcircle wow bounceInUp animated animated" data-wow-duration="1.5s" href="#content" style="visibility: visible; animation-duration: 1.5s;"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
+      </div>
+    </div>
+  </div>
 
-	<script src="//api.backendless.com/sdk/js/v4/beta/backendless.min.js"></script>
+  <div class="container" id="content">
+    <div class="row">
+      <div ng-repeat="klotter in klotterposts" class="col-sm-12 pull-right wow fadeInRightBig" style="min-width: 100%;">
+        <div class="card" style="text-align: center;">
+          <div class="cardcontainer">
+            <img class="img-rounded img-thumbnail" src="{{klotter.publicUrl}}" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-	<!-- angular app -->
-	<script src="app/angular.min.js"></script>
-	<script src="app/app.js"></script>
-	<script src="app/klotterCtrl.js"></script>
+  <script src="//api.backendless.com/sdk/js/v4/beta/backendless.min.js"></script>
+
+  <!-- angular app -->
+  <script src="app/angular.min.js"></script>
+  <script src="app/app.js"></script>
+  <script src="app/klotterCtrl.js"></script>
   <script src="app/fileUpload.js"></script>
 
 
-    <!-- JavaScript -->
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
-	<script src="js/owl.carousel.js"></script>
-	<script src="js/script.js"></script>
+  <!-- JavaScript -->
+  <script src="js/jquery-1.10.2.js"></script>
+  <script src="js/bootstrap.js"></script>
+  <script src="js/owl.carousel.js"></script>
+  <script src="js/script.js"></script>
 
-	<!-- Smoothscroll -->
-	<script type="text/javascript" src="js/jquery.corner.js"></script>
-	<script src="js/wow.min.js"></script>
-	<script>
-	 new WOW().init();
-	</script>
-	<script src="js/classie.js"></script>
-	<!-- Magnific Popup core JS file -->
-	<script src="js/jquery.magnific-popup.js"></script>
+  <!-- Smoothscroll -->
+  <script type="text/javascript" src="js/jquery.corner.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
+  <script src="js/classie.js"></script>
+  <!-- Magnific Popup core JS file -->
+  <script src="js/jquery.magnific-popup.js"></script>
 </body>
+
 </html>
