--- a/index.html
+++ b/index.html
@@ -141,18 +141,18 @@
   <!-- JavaScript -->
   <script src="js/jquery-1.10.2.js"></script>
   <script src="js/bootstrap.js"></script>
-  <script src="js/owl.carousel.js"></script>
+ <!--script src="js/owl.carousel.js"></script--> 
   <script src="js/script.js"></script>
 
   <!-- Smoothscroll -->
   <script type="text/javascript" src="js/jquery.corner.js"></script>
-  <script src="js/wow.min.js"></script>
+  <!--script src="js/wow.min.js"></script>
   <script>
-    new WOW().init();
-  </script>
+    //new WOW().init();
+  </script-->
   <script src="js/classie.js"></script>
   <!-- Magnific Popup core JS file -->
-  <script src="js/jquery.magnific-popup.js"></script>
+  <!--script src="js/jquery.magnific-popup.js"></script-->
 </body>
 
 </html>
