--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
   <div id="preloader">
     <div id="status"></div>
   </div>
+<!-- loading screen -->
+  <div id="working" class="intro-header" style="display: none;">
+    <div class="col-xs-12 text-center abcen1 main-stuff">
+      Sparar
+    </div>
+  </div>
 
   <!-- FullScreen -->
   <div id="main" class="intro-header">
@@ -145,12 +151,12 @@
   <script src="js/script.js"></script>
 
   <!-- Smoothscroll -->
-  <script type="text/javascript" src="js/jquery.corner.js"></script>
+  <!--script type="text/javascript" src="js/jquery.corner.js"></script-->
   <!--script src="js/wow.min.js"></script>
   <script>
     //new WOW().init();
   </script-->
-  <script src="js/classie.js"></script>
+  <!--script src="js/classie.js"></script-->
   <!-- Magnific Popup core JS file -->
   <!--script src="js/jquery.magnific-popup.js"></script-->
 </body>
