--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   <link href="css/general.css" rel="stylesheet">
 
   <!-- Owl-Carousel -->
-  <link href="css/custom.css" rel="stylesheet">
-  <link href="css/owl.carousel.css" rel="stylesheet">
-  <link href="css/owl.theme.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/animate.css" rel="stylesheet">
+  <!--link href="css/custom.css" rel="stylesheet"-->
+  <!--link href="css/owl.carousel.css" rel="stylesheet"-->
+  <!--link href="css/owl.theme.css" rel="stylesheet"-->
+  <!--link href="css/style.css" rel="stylesheet"-->
+  <!--link href="css/animate.css" rel="stylesheet"-->
 
   <!-- Magnific Popup core CSS file -->
-  <link rel="stylesheet" href="css/magnific-popup.css">
+  <!--link rel="stylesheet" href="css/magnific-popup.css"-->
 
   <link rel="stylesheet" href="css/klaudd.css">
 
@@ -56,6 +56,7 @@
 
 <body id="home" ng-app="klotterApp" ng-controller="klotterCtrl">
   <script>
+    /*
     window.fbAsyncInit = function () {
       FB.init({
         appId: '1534693413234227',
@@ -73,6 +74,7 @@
       js.src = "//connect.facebook.net/en_US/sdk.js";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
+    */
   </script>
   <style>
 
@@ -83,11 +85,11 @@
     <div id="status"></div>
   </div>
   <!-- loading screen -->
-  <div id="working" class="intro-header" style="display: none;">
+  <!--div id="working" class="intro-header" style="display: none;">
     <div class="col-xs-12 text-center abcen1 main-stuff">
       Sparar
     </div>
-  </div>
+  </div-->
 
   <!-- FullScreen -->
   <div id="main" class="intro-header">
