--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 
 <body id="home" ng-app="klotterApp" ng-controller="klotterCtrl">
   <script>
+    console.log("url : "+ window.location.href.toLowerCase());
+    if (window.location.href.toLowerCase())
+    {
+      window.location.href.toLowerCase()
+    }
     /*
     window.fbAsyncInit = function () {
       FB.init({
