--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   <link href="css/general.css" rel="stylesheet">
 
   <!-- Owl-Carousel -->
-  <!--link href="css/custom.css" rel="stylesheet"-->
-  <!--link href="css/owl.carousel.css" rel="stylesheet"-->
-  <!--link href="css/owl.theme.css" rel="stylesheet"-->
-  <!--link href="css/style.css" rel="stylesheet"-->
-  <!--link href="css/animate.css" rel="stylesheet"-->
+  <link href="css/custom.css" rel="stylesheet">
+  <link href="css/owl.carousel.css" rel="stylesheet">
+  <link href="css/owl.theme.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
 
   <!-- Magnific Popup core CSS file -->
-  <!--link rel="stylesheet" href="css/magnific-popup.css"-->
+  <link rel="stylesheet" href="css/magnific-popup.css">
 
   <link rel="stylesheet" href="css/klaudd.css">
 
@@ -101,11 +101,11 @@
     <div id="status"></div>
   </div>
   <!-- loading screen -->
-  <!--div id="working" class="intro-header" style="display: none;">
+  <div id="working" class="intro-header" style="display: none;">
     <div class="col-xs-12 text-center abcen1 main-stuff">
       Sparar
     </div>
-  </div-->
+  </div>
 
   <!-- FullScreen -->
   <div id="main" class="intro-header">
@@ -142,7 +142,7 @@
       <div ng-repeat="klotter in klotterposts" class="col-sm-12 pull-right wow fadeInRightBig" style="min-width: 100%;">
         <div class="card" style="text-align: center;">
           <div class="cardcontainer">
-            <img class="img-rounded img-thumbnail" ng-src="{{klotter.url}}" />
+            <img class="img-rounded img-thumbnail" ng-src="{{klotter.url}}" rotateonload/>
             <p>{{ klotter.text }}</p>
           </div>
         </div>
@@ -166,14 +166,14 @@
   <script src="js/script.js"></script>
 
   <!-- Smoothscroll -->
-  <!--script type="text/javascript" src="js/jquery.corner.js"></script-->
-  <!--script src="js/wow.min.js"></script>
+  <script type="text/javascript" src="js/jquery.corner.js"></script>
+  <script src="js/wow.min.js"></script>
   <script>
-    //new WOW().init();
-  </script-->
-  <!--script src="js/classie.js"></script-->
+    new WOW().init();
+  </script>
+  <script src="js/classie.js"></script>
   <!-- Magnific Popup core JS file -->
-  <!--script src="js/jquery.magnific-popup.js"></script-->
+  <script src="js/jquery.magnific-popup.js"></script>
 </body>
 
 </html>
