--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
     <div ng-show="loggedIn" class="col-xs-12 text-center abcen wow fadeIn animated animated" style="visibility: visible;">
       <div class="button_down ">
-        <a class="imgcircle wow bounceInUp animated animated" data-wow-duration="1.5s" href="#iamges" style="visibility: visible; animation-duration: 1.5s;"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
+        <a class="imgcircle wow bounceInUp animated animated" data-wow-duration="1.5s" href="#images" style="visibility: visible; animation-duration: 1.5s;"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
       </div>
     </div>
   </div>
