css fixar och prestanda

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
   </div>
 
-  <div class="container" id="images">
+  <div class="container wow" id="images">
     <div class="row">
       <div ng-repeat="klotter in klotterposts" class="col-sm-12 pull-right wow fadeInRightBig" style="min-width: 100%;">
         <div class="card" style="text-align: center;">
