--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div ng-repeat="klotter in klotterposts" class="col-sm-12 pull-right wow fadeInRightBig" style="min-width: 100%;">
         <div class="card" style="text-align: center;">
           <div class="cardcontainer">
-            <img class="img-rounded img-thumbnail" ng-src="{{klotter.url}}"/>
+            <img class="img-rounded img-thumbnail" ng-src="{{klotter.url}}" rotateonload/>
             <p>{{ klotter.text }}</p>
           </div>
         </div>
