--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="card" style="text-align: center;">
           <div class="cardcontainer">
             <div>
-              <img class="img-rounded img-thumbnail" ng-src="{{klotter.url}}" rotateonload/>
+              <img class="img-rounded img-thumbnail" ng-src="{{klotter.url}}" />
             </div>
             <div>
               <p>{{ klotter.text }}</p>
