--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <body id="home" ng-app="klotterApp" ng-controller="klotterCtrl">
   <script>
-
+/*
   if (inIframe())
   {
     if (/iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream)
@@ -71,7 +71,7 @@
       } catch (e) {
           return true;
       }
-  }
+  }*/
     /*
     window.fbAsyncInit = function () {
       FB.init({
@@ -153,12 +153,19 @@
           </div>
         </div>
       </div>
+      <div ng-show="loggedIn" class="row">
+        <div class="col-xs-12 text-center wow fadeIn animated animated">
+          <ul>
+            <li><i ng-hide="loadingmoredata" ng-click="loadmore()" class="fa fa-arrow-down fa-6" style="font-size: xx-large;" aria-hidden="false"></i></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
   <script src="//api.backendless.com/sdk/js/v4/beta/backendless.min.js"></script>
 
-  <script src="js/exif.js"></script>
+  <!--script src="js/exif.js"></script-->
 
   <!-- angular app -->
   <script src="app/angular.min.js"></script>
