lagt user profil data på vara inlägg så det går att använda fb profilbild m.m.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <img class="img-rounded img-thumbnail" ng-src="{{klotter.url}}" />
             </div>
             <div>
-              <p>{{ klotter.text }}</p>
+              <img class="profileimage" alt="{{ klotter.user.name }}" ng-src="{{ klotter.user.fbProfileUrl }}"><p>{{ klotter.text }}</p>
             </div>
           </div>
         </div>
